tests/baselines/reference/parserMemberAccessorDeclaration10.errors.txt
==== tests/cases/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration10.ts (2 errors) ====
    class C {
        export get Foo() { }
        ~~~~~~
!!! error TS1031: 'export' modifier cannot appear on a class element.
                   ~~~
!!! error TS2378: A 'get' accessor must return a value or consist of a single 'throw' statement.
    }